--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,4 @@
-django
-djangorestframework
-django-cors-headers
 psycopg2-binary
-django-environ
-django-filter
-djangorestframework-simplejwt
-djoser
-drf-spectacular
-drf-spectacular[sidecar]
-pillow
 django-allauth
+xhtml2pdf
+python-docx
